{%- if cookiecutter.project_type == "setuptools" or cookiecutter.project_type == "pybind11" -%}
[metadata]
name = {{ cookiecutter.project_name.replace("-", "_") }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
maintainer = {{ cookiecutter.maintainer }}
maintainer_email = {{ cookiecutter.maintainer_email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{ cookiecutter.url }}
license = BSD 3-Clause License
# keywords =
platforms =
  Any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Development Status :: 1 - Planning

[options]
python_requires = >=3.6
packages = find:
package_dir =
  =src
install_requires =
  numpy >=1.13.3
  typing; python_version<"3.5"

[options.packages.find]
where = src

[options.extras_require]
test =
  pytest >=4.6
dev =
  pytest >=4.6
docs =
  recommonmark >=0.5.0
  Sphinx >=3.0.0
  sphinx_copybutton
  sphinx_rtd_theme >=0.5.0

[tool:pytest]
addopts = -rs -s -Wd
testpaths =
    tests

[check-manifest]
ignore =
  .github/**
  docs/**
  .pre-commit-config.yaml
  .readthedocs.yml
  src/*/version.py

{%- endif %}

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T

[mypy]
files = src
python_version = 3.6
warn_unused_configs = True

# Currently (0.800) identical to --strict
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-numpy]
ignore_missing_imports = True
