{%- if cookiecutter.project_type == "setuptools" or cookiecutter.project_type == "pybind11" -%}
[metadata]
name = {{ cookiecutter.project_name.replace("-", "_") }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{ cookiecutter.url }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
maintainer = {{ cookiecutter.maintainer }}
maintainer_email = {{ cookiecutter.maintainer_email }}
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy>=1.13.3
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=4.6
docs =
    Sphinx>=3.0.0
    recommonmark>=0.5.0
    sphinx_copybutton
    sphinx_rtd_theme>=0.5.0
test =
    pytest>=4.6

[tool:pytest]
addopts = -rs -s -Wd
testpaths =
    tests

[check-manifest]
ignore =
    .github/**
    docs/**
    .pre-commit-config.yaml
    .readthedocs.yml
    src/*/version.py

{%- endif %}

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T

[mypy]
files = src
python_version = 3.6
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-numpy]
ignore_missing_imports = True
